--- a/GroceryStoreAPI/appsettings.json
+++ b/GroceryStoreAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "GroceryStoreAPI": "Data Source=AMEE; Initial Catalog=GroceryStore;Integrated Security=true;TrustServerCertificate=True;"
-  }
+  },
+  //"Jwt": {
+  //  "Key": "aayushtanna_aayushtanna_aayushtanna_aayushtanna_aayushtanna ",
+  //  "Issuer": "JwtIssuer",
+  //  "Audience": "JwtAudience",
+  //  "Subject": "JwtSubject"
+  //}
+
 }
