--- a/GroceryStoreAPI/appsettings.json
+++ b/GroceryStoreAPI/appsettings.json
@@ -9,11 +9,11 @@
   "ConnectionStrings": {
     "GroceryStoreAPI": "Data Source=AMEE; Initial Catalog=GroceryStore;Integrated Security=true;TrustServerCertificate=True;"
   },
-  //"Jwt": {
-  //  "Key": "aayushtanna_aayushtanna_aayushtanna_aayushtanna_aayushtanna ",
-  //  "Issuer": "JwtIssuer",
-  //  "Audience": "JwtAudience",
-  //  "Subject": "JwtSubject"
-  //}
+  "Jwt": {
+    "Key": "ameeshah17_ameeshah17_ameeshah17_ameeshah17",
+    "Issuer": "JwtIssuer",
+    "Audience": "JwtAudience",
+    "Subject": "JwtSubject"
+  }
 
 }
